Fixed bug in side bar bottom action not being visible in mobile mode

--- a/scoreboard-styles.css
+++ b/scoreboard-styles.css
@@ -550,6 +550,7 @@ button.sidebar-toggle {
     right: 0;
     border-right: none;
     border-top: 1px solid var(--muted-border);
+    z-index: 99;
     transition: height .22s cubic-bezier(.2, .8, .2, 1);
     padding-top: 0
   }
